* 1.6
    - blacklist: blacklist file is now human-readable/editable (thanks Armando Miraglia)
    - fix syslog format detection on hosts with undefined hostname
    - fix ipfw backend crashing when blacklist is enabled but empty on start-up (thanks Jin Choi)

* 1.5       Feb 2011
    - logsucker: sshguard polls multiple log files at once
    - recognize syslog's "last message repeated N times" contextually and per-source
    - attackers now gauged with attack *dangerousness* instead of count (adjust your -a !)
    - improve IPv6 support
    - add detection for: Exim, vsftpd, Sendmail, Cucipop
    - improve Solaris support (thanks OpenCSW.org folks)
    - handle huge blacklists efficiently
    - improve logging granularity and descriptiveness
    - add -i command line option for saving PID file as an aid for startup scripts
    - update some attack signatures
    - many other improvements, see 1.5beta and 1.5rc changelogs for complete credits
    - fix a recognition problem for multilog files
    - fix log filtering on OSes with inverted priority declarations
    - fix file descriptor leak if "ps" command fails to run
    - fix whitelist module allowing some entries to be skipped (thanks Andrea Dal Farra)
    - fix segfault from invalid free() when all DNS lookups fail
    - fix assertion failure when logsucker is notified before the logging completes (thanks Colin Keith)

* 1.4       Aug 2009
    - add touchiness: block repeated abusers for longer
    - add blacklisting: store frequent abusers for permanent blocking
    - add support for IPv6 in whitelisting (experimental)
    - sshguard ignores interrupted fgets() and reloads more seldom (thanks Keven Tipping)
    - debug mode now enabled with SSHGUARD_DEBUG environment variable (no "-d")
    - support non-POSIX libCs that require getopt.h (thanks Nobuhiro Iwamatsu)
    - import newer SimCList containing a number of fixes and improvements